# descanso

./: .coverage  .coveragerc  .gitignore  .pytest.toml  .ruff.toml  README.md  _typos.toml  pyproject.toml  requirements_dev.txt  requirements_doc.txt
.github/workflows/: setup.yml
docs/: auth.rst  conf.py  configuration.rst  index.rst  jsonrpc.rst  migration_from_dcr.rst  quickstart.rst  transports.rst
docs/ext/: autodoc_unpack.py
examples/: async_example.py  descanso_example.py  example.py  json_rpc.py  pydantic_model.py  vkapi_example.py
src/dataclass_rest/: boundmethod.py  method.py  response_type.py  rest.py
src/dataclass_rest/http/: aiohttp.py  requests.py
src/descanso/: __init__.py  apply.py  bound_method.py  builder_base.py  client.py  exceptions.py  jsonrpc.py  method_descriptor.py  method_spec.py  methodspec.py  request.py  request_transformers.py  response.py  response_transformers.py  response_transofrmers.py  rest.py  rest_builder.py  signature.py  utils.py
src/descanso/http/: aiohttp.py  httpx.py  requests.py
tests/: test_init.py
tests/aiohttp/: test_file.py
tests/builders/: test_jsonrpc.py  test_rest.py  utils.py
tests/clients/: conftest.py  data.py  server.py  test_aiohttp.py  test_requests.py
tests/http/: conftest.py  data.py  server.py  test_aiohttp.py  test_httpx.py  test_requests.py
tests/request_transformers/: test_basic_auth.py  test_dumper.py  test_fields.py  test_jsonrpc.py  test_query_formats.py  utills.py
tests/requests/: conftest.py  stubs.py  test_callable_url.py  test_factory.py  test_params.py  test_parse_func.py
tests/response_transofmers/: test_error_raiser.py  test_loader.py
tests/responses/: test_error_raiser.py
