[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "descanso"
version = "0.4"
readme = "README.md"
authors = [
    { name = "Andrey Tikhonov", email = "17@itishka.org" },
]
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "An utility for writing simple clients for REST like APIs"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Source" = "https://github.com/reagento/descanso"
"Homepage" = "https://github.com/reagento/descanso"
"Documentation" = "https://descanso.readthedocs.io/en/stable/"
"Bug Tracker" = "https://github.com/reagento/descanso/issues"


