[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project]

name = "descanso"
version = "0.6.0"
readme = "README.md"
authors = [
    { name = "Andrey Tikhonov", email = "17@itishka.org" },
]
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "An utility for writing simple clients for REST like APIs"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
dependencies = [
    'kiss-headers',
]

[project.urls]
"Source" = "https://github.com/reagento/descanso"
"Homepage" = "https://github.com/reagento/descanso"
"Documentation" = "https://descanso.readthedocs.io/en/stable/"
"Bug Tracker" = "https://github.com/reagento/descanso/issues"


